{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 43,
  "lineage": "3708cd78-42ee-efb1-3ee1-9204e91c8eda",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f6d65d5f6638bb7",
            "association_id": "eipassoc-035dc79e426886500",
            "domain": "vpc",
            "id": "eipalloc-04f6d65d5f6638bb7",
            "instance": "i-0f947ecca107695be",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-08c48db5f53ff0931",
            "private_dns": "ip-10-0-1-190.ap-south-1.compute.internal",
            "private_ip": "10.0.1.190",
            "public_dns": "ec2-3-111-152-219.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.152.219",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.wipro-web",
            "aws_security_group.wipro-sg",
            "aws_subnet.wipro-publicsubnet",
            "aws_vpc.wipro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wipro-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c6615d1e95c98aca",
            "arn": "arn:aws:ec2:ap-south-1:959925711418:instance/i-0f947ecca107695be",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f947ecca107695be",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "wipro-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08c48db5f53ff0931",
            "private_dns": "ip-10-0-1-190.ap-south-1.compute.internal",
            "private_ip": "10.0.1.190",
            "public_ip": "3.111.152.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01731b551b2e0199b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cf965a9c9eaa12a2",
            "tags": {
              "Name": "WebServer"
            },
            "tags_all": {
              "Name": "WebServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08dbf708409ff38f2"
            ]
          },
          "dependencies": [
            "aws_security_group.wipro-sg",
            "aws_subnet.wipro-publicsubnet",
            "aws_vpc.wipro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wipro-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:959925711418:internet-gateway/igw-07ba0be8ec997bb90",
            "id": "igw-07ba0be8ec997bb90",
            "owner_id": "959925711418",
            "tags": {
              "Name": "wipro-igw"
            },
            "tags_all": {
              "Name": "wipro-igw"
            },
            "vpc_id": "vpc-04675ea94e0d0572f"
          },
          "dependencies": [
            "aws_vpc.wipro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wipro-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:959925711418:route-table/rtb-0ed41ee17c43d9a38",
            "id": "rtb-0ed41ee17c43d9a38",
            "owner_id": "959925711418",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07ba0be8ec997bb90",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wipro-rt"
            },
            "tags_all": {
              "Name": "wipro-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04675ea94e0d0572f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wipro-igw",
            "aws_vpc.wipro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wipro-public-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb5962297aa6a199",
            "route_table_id": "rtb-0ed41ee17c43d9a38",
            "subnet_id": "subnet-0cf965a9c9eaa12a2"
          },
          "dependencies": [
            "aws_route_table.wipro-rt-public",
            "aws_subnet.wipro-publicsubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wipro-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:959925711418:security-group/sg-08dbf708409ff38f2",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08dbf708409ff38f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wipro-sg",
            "name_prefix": "",
            "owner_id": "959925711418",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wipro-sg"
            },
            "tags_all": {
              "Name": "wipro-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04675ea94e0d0572f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wipro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wipro-publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:959925711418:subnet/subnet-0cf965a9c9eaa12a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf965a9c9eaa12a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "959925711418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wipro-publicsubnet"
            },
            "tags_all": {
              "Name": "wipro-publicsubnet"
            },
            "vpc_id": "vpc-04675ea94e0d0572f"
          },
          "dependencies": [
            "aws_vpc.wipro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wipro-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:959925711418:vpc/vpc-04675ea94e0d0572f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-031bed6625e882dc2",
            "default_route_table_id": "rtb-0957a8cc94898f327",
            "default_security_group_id": "sg-0f00f95888fc64327",
            "dhcp_options_id": "dopt-05ee8d8f0dc1b462b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04675ea94e0d0572f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0957a8cc94898f327",
            "owner_id": "959925711418",
            "tags": {
              "Name": "wipro-vpc"
            },
            "tags_all": {
              "Name": "wipro-vpc"
            }
          }
        }
      ]
    }
  ]
}